# mergebot-experimental-data

./: .gitignore  .gitmodules  README.md
art/0011b50c-c831818b-96d09a10/: libnativeloader@library_namespaces.diff  libnativeloader@library_namespaces.mergebot.cpp  libnativeloader@library_namespaces.mergegen.diff  libnativeloader@library_namespaces.mergegen.processed_processed.diff  libnativeloader@library_namespaces.no_comments_conflict.cpp  libnativeloader@library_namespaces.no_comments_mergebot.cpp  libnativeloader@library_namespaces.raw.diff  libnativeloader@library_namespaces.raw.processed_processed.diff  libnativeloader@library_namespaces_processed.diff  libnativeloader@native_loader_test.diff  libnativeloader@native_loader_test.mergegen.cpp.json  libnativeloader@native_loader_test.mergegen.processed_processed.diff  mergegen_conflict_statistics.json  (+6 more)
scripts/: README.md  correlation-analysis.py  data-analysis.ipynb  pyproject.toml  taboo.json
scripts/octok/: aggregator.py  cli.py  config.py  evaluate.py  log.py  train.py
scripts/octok/command/: miner.py  model.py  stat.py
scripts/octok/judger/: judger.py
scripts/octok/model/: __init__.py  conflict_source.py  json_helper.py  merge_scenario.py  merge_scenario_statistics.py
scripts/octok/serializer/: mongo.py
scripts/octok/utils/: common.py  fileop.py  git.py  gitservice.py
scripts/scripts/: couter.py  fix-mergegen.py  fix-raw.py  get_test_mergescenarios.py  mergegen.py  tu_counter.py  tu_counter.txt
scripts/tests/: test_evaluate.py  test_log.py
summary/: block-level-complete.csv  heuristic-results.csv
(+14617 files in other folders)
