[tool.poetry]
name = "octok"
version = "0.1.0"
description = ""
authors = ["Hwa <hwahe.cs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
pytest = "^8.3.3"
pygit2 = "1.14.1"
aiofile = "^3.9.0"
click = "^8.1.7"
vistir = "^0.8.0"
chardet = "^5.2.0"
rich = "^13.9.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
ipython = "^8.30.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
